--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -21,6 +21,9 @@ header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+#deltar-produto{
+  display: none;
+}
 h1 {
   margin-top: 0;
 }
@@ -29,6 +32,10 @@ h1 {
   margin-bottom: 20px;
 }
 
+
+.deletarProdutos{
+  display: none;
+}
 label {
   display: block;
   font-weight: bold;
