--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -22,7 +22,7 @@ header {
 }
 
 #deltar-produto{
-  display: none;
+  width: 100%;
 }
 h1 {
   margin-top: 0;
@@ -82,3 +82,48 @@ input[type="number"]::placeholder {
   color: #999;
 }
 
+
+table {
+width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+
+th {
+  background-color: #007bff;
+  color: white;
+}
+
+
+@media screen and (max-width: 768px) {
+  table {
+      border: 0;
+  }
+
+  table thead {
+      display: none;
+  }
+
+  table tr {
+      border-bottom: 3px solid #ddd;
+      display: block;
+      margin-bottom: 10px;
+  }
+
+  table td {
+      display: block;
+      text-align: right;
+  }
+
+  table td::before {
+      content: attr(data-label);
+      float: left;
+      font-weight: bold;
+  }
+}
