classe adicionada aos tds

--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -116,6 +116,10 @@ th {
   width: 100px;
 }
 
+.tirarBorderNone{
+  border: none;
+}
+
 @media screen and (max-width: 768px) {
   table {
       border: 0;
