--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -12,15 +12,33 @@ header {
   padding: 20px 0;
 }
 
+
+main{
+  display: flex;
+}
+
+.divTabela{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .container {
+  display: flex;
+  flex-direction: column;
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  gap: 10px;
 }
 
+.divDados{
+  display: flex;
+  gap: 10px;
+}
 #deltar-produto{
   width: 100%;
 }
