--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -40,8 +40,10 @@ main{
   gap: 10px;
 }
 #deltar-produto{
-  width: 100%;
+  width: auto;
+  height: auto;
 }
+
 h1 {
   margin-top: 0;
 }
@@ -50,6 +52,10 @@ h1 {
   margin-bottom: 20px;
 }
 
+#botaoCadastrar{
+  width: auto;
+  height: auto;
+}
 
 .deletarProdutos{
   display: none;
