agora mostra o total de produtos cadastrados

--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -6,9 +6,8 @@ body {
 }
 
 header {
-  background-color: #007bff;
+  background-color: #212429;
   color: #fff;
-  text-align: center;
   padding: 20px 0;
 }
 
