--- a/grud/src/style.css
+++ b/grud/src/style.css
@@ -2,19 +2,23 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: #212429;
 }
 
 header {
   background-color: #212429;
   color: #fff;
   padding: 20px 0;
+
 }
 
 
 main{
   display: flex;
+  background-color: #212429;
 }
+
+
 
 .divTabela{
   display: flex;
@@ -28,10 +32,15 @@ main{
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #212429;
+  color: white;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   gap: 10px;
+  margin-top: -15px;
+}
+
+input{
+  border: 2px solid #BB2D3B;
 }
 
 .divDados{
@@ -66,20 +75,63 @@ label {
 
 input[type="text"],
 input[type="number"] {
-  width: calc(100% - 16px); /* Contabiliza o padding */
-  padding: 8px;
-  border: 1px solid #ccc;
+  width: calc(100% - 16px); 
   border-radius: 4px;
 }
 
-button {
+.dark-mode-toggle input[type="checkbox"] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.toggle-label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 40px;
+  height: 20px;
+  background: grey;
+  display: block;
+  border-radius: 20px;
+  position: relative;
+}
+
+.toggle-label:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background: white;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+
+.dark-mode-toggle input[type="checkbox"]:checked + .toggle-label {
+  background: #2c3e50; 
+}
+
+.dark-mode-toggle input[type="checkbox"]:checked + .toggle-label:after {
+  left: calc(100% - 2px);
+  transform: translateX(-100%);
+  background: #f1c40f; 
+}
+
+.delete-button, #botao-pequisar-criterios, #botaoCadastrar, #botao-pesquisar {
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #0D6EFD;
+  color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 44px;
   cursor: pointer;
   transition: background-color 0.3s;
+
+}
+
+input, select{
+  border: none;
+  outline: none;
 }
 
 button:hover {
@@ -105,7 +157,16 @@ input[type="number"]::placeholder {
   color: #999;
 }
 
+li{
+  display: inline-block;
+  margin-left: 10px;
+    margin-right: 10px;
+}
 
+.form-group{
+  display: flex;
+  flex-direction: column;
+}
 table {
 width: 100%;
   border-collapse: collapse;
@@ -143,6 +204,9 @@ th {
   border: none;
 }
 
+#optionprodutos{
+  width: 50px;
+}
 @media screen and (max-width: 768px) {
   table {
       border: 0;
@@ -164,8 +228,14 @@ th {
   }
 
   table td::before {
+    display: flex;
+    
+    justify-content: center;
       content: attr(data-label);
-      float: left;
       font-weight: bold;
+  }
+  main{
+    display: flex;
+    flex-direction: column;
   }
 }
